[tool.poetry]
name = "pothos"
version = "0.1.0"
description = "Scheduler to reconnect NordVPN to a new server"
authors = ["Jess <79601842+jess192@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
schedule = "^1.1.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
pothos = "pothos.__main__:run_schedule"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
